# mdi_simulation

./: .gitignore  Binlog.txt  CMakeLists.txt  CMakePresets.json  TODO.md  chatgpt.json  evitar.json  file.json  grok.json  invos5100c_config.csv  medibus.json  text.py
core/common/: Log.h
core/include/: ConfigLoader.h  ConfigManager.h  CsvParser.h  DataModel.h  DeviceBase.h  DeviceManager.h  FileDataLoader.h  FrameHandler.h  Log.h  MainWindow.h  StateMachine.h  TableParameter.h
core/src/: ConfigLoader.cpp  ConfigManager.cpp  CsvParser.cpp  DataModel.cpp  DeviceManager.cpp  FileDataLoader.cpp  FrameHandler.cpp  GROK copy.cpp  GROK.cpp  HSC_CHATGPT.cpp  INSO  INVOS  MainWindow.cpp  StateMachine.cpp  TableParameter.cpp  main.cpp
core/src/common/: Log.cpp
docs/: CI500  HCS-CFP  INVOS5100C  PB  Tóm tắt dữ liệu 4 máy.ini
resources/qml/: ExitBar.qml  ParameterTable.qml  PortDialog.qml  StandardButton.qml  StatusPopup.qml  TopBar.qml  main.qml
